# darkreader

./: README.md  meson.build
src/inject/dynamic-theme/: modify-css.ts  network.ts  style-manager.ts
tasks/: bundle-js.js
web-archives/scripts/: build.sh
web-archives/src/: darkreader.ts
